# rerun-remake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  shell.html
include/: config.h
resources/dataset/: cameras.txt  images.txt  points3D.txt
src/: main.cpp
src/Core/: types.h  utils.h
src/Core/DataManager/: DataManager.cpp  DataManager.h
src/GUI/: GUI.cpp  GUI.h
src/GUI/Blueprint/: Blueprint.cpp  Blueprint.h
src/GUI/Loader/: Loader.cpp  Loader.h
src/GUI/Menu/: Menu.cpp  Menu.h
src/GUI/Scene/: Scene.h  Scene2D.cpp  Scene2D.h  Scene3D.cpp  Scene3D.h  SceneDepth.cpp  SceneDepth.h
src/GUI/Selection/: Selection.cpp  Selection.h
src/GUI/Timeline/: Timeline.h
